--- a/index.Rmd
+++ b/index.Rmd
@@ -2,4 +2,17 @@
 title: "Daniel Tregeagle, Ph.D."
 ---
 
+![optional caption text](danielTregeaglePicture1.jpg)
+
+
+<!-- <img align="right" src="./photos/danielTregeaglePicture1.jpg" width = "300"> -->
+
+### Post-Doctoral Scholar
+#### Department of Agricultural and Resource Economics, UC Davis
+
+<br>
+<!-- <br> -->
+<!-- <br> -->
+<!-- <br> -->
+
 Hello, Website!
