--- a/research.Rmd
+++ b/research.Rmd
@@ -2,4 +2,18 @@
 title: "Research"
 ---
 
-Research page under construction
+<!-- Research page under construction -->
+
+My dissertation, [The Dynamics of Perennial Crop Production and Processing](https://search.proquest.com/openview/8a0410c763dd2cbd11235ab3588a1050/1.pdf?pq-origsite=gscholar&cbl=18750&diss=y), focused on the economics of perennial crop production, with applications to Brazilian sugarcane and the expansion of the Brazilian biofuel industry.
+
+My current projects include:
+
+ * Analyzing the expected costs of proposed Californian pesticide use regulations
+ * Examining the drivers of boom and bust cycles in perennial crop industries
+ <!-- * Investigating how the incentives for agricultural industry collective action are affected by the life-cycle of the industry's crop -->
+ * Investigating how a crop's life-cycle influences growers' decision making, including incentives for collective action and vertical coordination
+ 
+ <!-- driving producer organization fund allocation (how do they spend their money?) -->
+ <!-- * Crop life cycle affects the incentives for industry collective action -->
+
+Prior to beginning my Ph.D. I worked at the [Australian Bureau of Agricultural and Resource Economics and Sciences](http://www.agriculture.gov.au/abares) analyzing Australian irrigation policy and the Murray-Darling Basin Plan.
