--- a/cv.Rmd
+++ b/cv.Rmd
@@ -4,4 +4,4 @@ title: "CV"
 
 [One Page CV](files/tregeagleCV_2018_09_OnePage.pdf)
 
-[CV Download Link](files/tregeagleCV_2018_08.pdf)
+[Full CV](files/tregeagleCV_2018_08.pdf)
