--- a/research.Rmd
+++ b/research.Rmd
@@ -6,14 +6,22 @@ title: "Research"
 
 My dissertation, [The Dynamics of Perennial Crop Production and Processing](https://search.proquest.com/openview/8a0410c763dd2cbd11235ab3588a1050/1.pdf?pq-origsite=gscholar&cbl=18750&diss=y), focused on the economics of perennial crop production, with applications to Brazilian sugarcane and the expansion of the Brazilian biofuel industry.
 
-My current projects include:
 
- * Analyzing the expected costs of proposed Californian pesticide use regulations
- * Examining the drivers of boom and bust cycles in perennial crop industries
+## Working Papers
+
+[Optimal Management of Orchards](files/OptimalManagementOfOrchards_200909.pdf) (with Leo Simon)
+
+*Abstract*:
+A fundamental issue in perennial crop economics is finding the optimal time to replace trees in an orchard. Orchards have two key characteristics: they consist of trees of multiple vintages, and the trees have a non-monotonic yield curve. We present the first analysis of optimal tree replacement in an orchard that has both characteristics. Our results show that cyclical production is optimal in the long-run, and that optimally managed orchards converge to the long-run cycle surprisingly quickly. Our results have implications for orchard valuation, orchard planting, and orchard conversion. We are also the first to provide comparative statics on the long-run cycle radius. In addition, forest management is a natural point of comparison to orchard management. We contrast the optimal replacement rules for orchards and forests to show the qualitative differences.
+
+<!-- My current projects include: -->
+
+ <!-- * Analyzing the expected costs of proposed Californian pesticide use regulations -->
+ <!-- * Examining the drivers of boom and bust cycles in perennial crop industries -->
  <!-- * Investigating how the incentives for agricultural industry collective action are affected by the life-cycle of the industry's crop -->
- * Investigating how a crop's life-cycle influences growers' decision making, including incentives for collective action and vertical coordination
+ <!-- * Investigating how a crop's life-cycle influences growers' decision making, including incentives for collective action and vertical coordination -->
  
  <!-- driving producer organization fund allocation (how do they spend their money?) -->
  <!-- * Crop life cycle affects the incentives for industry collective action -->
 
-Prior to beginning my Ph.D. I worked at the [Australian Bureau of Agricultural and Resource Economics and Sciences](http://www.agriculture.gov.au/abares) analyzing Australian irrigation policy and the Murray-Darling Basin Plan.
+<!-- Prior to beginning my Ph.D. I worked at the [Australian Bureau of Agricultural and Resource Economics and Sciences](http://www.agriculture.gov.au/abares) analyzing Australian irrigation policy and the Murray-Darling Basin Plan. -->
