Justifying text, adding floats and extension webpage

--- a/cv.Rmd
+++ b/cv.Rmd
@@ -1,7 +1,11 @@
 ---
 title: "CV"
 ---
+<style>
+body {
+text-align: justify}
+</style>
 
 [One Page CV](files/tregeagleCV_2018_09_OnePage.pdf)
 
-[Full CV](files/tregeagleCV_2018_08.pdf)
+[Full CV](files/tregeagleCV_2020_11.pdf)
