--- a/index.Rmd
+++ b/index.Rmd
@@ -7,7 +7,7 @@ text-align: justify}
 </style>
 
 ```{css, echo=FALSE}
-.floatRight{float:right;margin-left:40px;margin-bottom:500px}
+.floatRight{float:right;margin-left:40px;margin-bottom:500px;margin-top:75px}
 ```
 
 <img class="floatRight" src="./photos/danielTregeaglePicture2.jpg" width = "300">
