--- a/teaching.Rmd
+++ b/teaching.Rmd
@@ -36,6 +36,8 @@ I received a [Certificate of Teaching and Learning in Higher Education](https://
 
 ## Experience
 
+ - Instructor, *Fundamentals of Microeconomics (ECG700)*, NC State, Fall 2020.
+
  - Instructor, Master of Development Practice Math Bootcamp, UC Berkeley, Summer 2014--2017 (4 summers).
  
  - Discipline-Cluster Workshop Leader for Quantitative Social Sciences, UC Berkeley GSI Teaching Conference, Spring 2017.
