--- a/research.Rmd
+++ b/research.Rmd
@@ -20,13 +20,9 @@ My dissertation, [The Dynamics of Perennial Crop Production and Processing](file
 A fundamental issue in perennial crop economics is finding the optimal time to replace trees in an orchard. Orchards have two key characteristics: they consist of trees of multiple vintages, and the trees have a non-monotonic yield curve. We present the first analysis of optimal tree replacement in an orchard that has both characteristics. Our results show that cyclical production is optimal in the long-run, and that optimally managed orchards converge uniformly to the long-run cycle. Our results have implications for orchard valuation, orchard planting, and orchard conversion. We are also the first to provide comparative statics on the long-run cycle radius. 
 
 
-### [Managing the age of perennial crops for processing: Maximum sustainable yield is a good heuristic](files/Tregeagle_Zilberman_biorefinery_Jul07_2021.pdf) (with David Zilberman)
+### [Managing the age of perennial crops for processing: Maximum sustainable yield is a good heuristic](files/refineryRotationDraft_forPublication.pdf) (with David Zilberman)
 *Abstract*:
-Producers of perennial crops face a relationship between age and yield, raising the question: what is the optimal age of their crop? Tisdell and Da Silva (1986) argued that managing perennials for maximum sustainable yield is a good heuristic. In this paper we show that considering perennials from a supply chain perspective amplifies their argument: The addition of delivery costs provides an additional incentive to set the optimal age close to the maximum sustainable yield age.
-
-We present, to our knowledge, the first model of optimal perennial crop age when the output is used as a feedstock for a processing facility. To account for non-convexities in the cost-minimization problem, we prove, under certain assumptions on the age-yield function, that the first order conditions of the model have a solution and provide a sufficient condition for this solution to also solve the original cost-minimization problem. We generate analytical comparative statics of this solution with respect to facility size and cost parameters. 
-
-To show the empirical robustness of these results, we calibrate simulations to the sugarcane industry in Sao Paulo, Brazil and the almond industry in California, showing that that the optimal age is very close to the maximum sustainable yield age. These results support Tisdell and De Silva’s argument that maximum sustainable yield is important for practical perennial management, since the difference in cost between the two approaches is negligible and the MSY approach requires less, more easily obtainable information.
+The design of perennial crop supply chains requires an answer to the question: what is the optimal age to replace the crop? We present a novel theoretical framework to study optimal perennial crop age when the output is used as a feedstock for a processing facility. We prove that our model has a solution and generate analytical comparative statics with respect to facility size and cost parameters. To show the empirical robustness of these theoretical results, we calibrate simulations to the sugarcane industry in Sao Paulo, Brazil and the almond industry in California, showing that that the optimal age is very close to the maximum sustainable yield age. These results support the use of maximum sustainable yield as an important management heuristic, since the difference in cost between the two approaches is negligible and the MSY approach requires less, more easily obtainable information.
 
 
 ## Works in progress
