--- a/teaching.Rmd
+++ b/teaching.Rmd
@@ -36,7 +36,7 @@ I received a [Certificate of Teaching and Learning in Higher Education](https://
 
 ## Experience
 
- - Instructor, *Fundamentals of Microeconomics (ECG700)*, NC State, Fall 2020.
+ - Instructor, *Fundamentals of Microeconomics (ECG700)*, NC State, Fall 2020-21.
 
  - Instructor, Master of Development Practice Math Bootcamp, UC Berkeley, Summer 2014--2017 (4 summers).
  
