Adding SHC and Labor projects

--- a/research.Rmd
+++ b/research.Rmd
@@ -73,9 +73,10 @@ A fundamental issue in perennial crop economics is finding the optimal time to r
   - Updating demand and supply elasticities for citrus and related crops (with Gregory Astill, Zoë Plakias and Jonathon Siegle)
   - Measuring grower and market intermediary willingness-to-pay for improvements in cucurbit disease resistance (with Alice Kilduff)
   - Exploring the impact of water technology choices on native plant sales in US nurseries (with Melinda Knuth, Alicia Rihn, Bridget Behe, Marco Palma, and Bryan Peterson)
-  - Improving impact measurement for specialty crop extension programs
   - Strengthening and expanding muscadine markets (with Chris Gunter, Mark Hoffmann, Lynette Johnson, Penelope Perkins-Veazie and Craig Mauney)
   - Updating the Southeastern Strawberry Production Guide (PD: Mark Hoffmann)
+  - U.S Consumers' Perceptions on Agricultural Labor Supply (with Vitalis Othuon, Benjamin Campbell, and William Secor)
+  - Regionally Identified Heirloom Crops as a Viable Niche for Small Specialty Producers (with Ben Boyles, Diana Fossbrinck, David Lamie, Yefan Nian, and Michael Vassalos)
 
 
 <br>
